UPD: Merge changes from trunk (r3670-3674)
git-svn-id: http://svn.code.sf.net/p/doublecmd/code@3762 10bb5c37-c6d6-4c74-9a2a-30fc9b6e22f7

--- a/branches/0.5/language/doublecmd.po
+++ b/branches/0.5/language/doublecmd.po
@@ -4559,8 +4559,8 @@ msgstr ""
 msgid "=>"
 msgstr ""
 
-#: TFRMPACKDLG.CBRECURSE.CAPTION
-msgid "Recursively pack &subdirectories"
+#: TFRMPACKDLG.CBPUTINTARFIRST.CAPTION
+msgid "Put in the TAR archive first"
 msgstr ""
 
 #: TFRMPACKDLG.CBSTOREDIR.CAPTION
