--- a/branches/0.5/language/doublecmd.ru.po
+++ b/branches/0.5/language/doublecmd.ru.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Double Commander 0.3.5 alpha\n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: 2011-06-25 14:27+0300\n"
+"PO-Revision-Date: 2011-06-28 13:59+0300\n"
 "Last-Translator: Alexander Koblov <Alexx2000@mail.ru>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -1523,8 +1523,7 @@ msgstr "В очередь"
 msgid "Work in &background"
 msgstr "В фоне"
 
-#: TFRMFILEOP.FRMFILEOP.CAPTION
-msgctxt "TFRMFILEOP.FRMFILEOP.CAPTION"
+#: TFRMFILEOP.CAPTION
 msgid "Process file(s)"
 msgstr "Обработать файл(ы)"
 
@@ -4719,9 +4718,9 @@ msgstr "&Многотомный архив"
 msgid "=>"
 msgstr ""
 
-#: TFRMPACKDLG.CBRECURSE.CAPTION
-msgid "Recursively pack &subdirectories"
-msgstr "&Учитывать подкаталоги"
+#: TFRMPACKDLG.CBPUTINTARFIRST.CAPTION
+msgid "Put in the TAR archive first"
+msgstr "Предварительно упаковать в TAR архив"
 
 #: TFRMPACKDLG.CBSTOREDIR.CAPTION
 msgid "Also &pack path names (only recursed)"
@@ -5044,6 +5043,10 @@ msgctxt "TFRMTWEAKPLUGIN.BTNREMOVE.CAPTION"
 msgid "Remove"
 msgstr "Удалить"
 
+#: TFRMTWEAKPLUGIN.CAPTION
+msgid "Tweak plugin"
+msgstr "Настройка плагина"
+
 #: TFRMTWEAKPLUGIN.CBPK_CAPS_BY_CONTENT.CAPTION
 msgid "Detect archive type by content"
 msgstr "Определяет тип архива по содержимому"
@@ -5083,11 +5086,6 @@ msgstr "Имеет диалог настроек"
 #: TFRMTWEAKPLUGIN.CBPK_CAPS_SEARCHTEXT.CAPTION
 msgid "Allow searching for text in archives"
 msgstr "Позволяет искать в архивах"
-
-#: TFRMTWEAKPLUGIN.FRMTWEAKPLUGIN.CAPTION
-msgctxt "TFRMTWEAKPLUGIN.FRMTWEAKPLUGIN.CAPTION"
-msgid "Tweak plugin"
-msgstr "Настройка плагина"
 
 #: TFRMTWEAKPLUGIN.LBLDESCRIPTION.CAPTION
 msgctxt "TFRMTWEAKPLUGIN.LBLDESCRIPTION.CAPTION"
