--- a/branches/0.5/language/doublecmd.pl.po
+++ b/branches/0.5/language/doublecmd.pl.po
@@ -498,6 +498,7 @@ msgid "Keep scrolling"
 msgstr "Kontynuuj przewijanie"
 
 #: TFRMCONFIGTOOLBAR.BTNAPPENDBUTTON.CAPTION
+msgctxt "TFRMCONFIGTOOLBAR.BTNAPPENDBUTTON.CAPTION"
 msgid "&Insert new button"
 msgstr "Dodaj nowy przycisk"
 
@@ -5569,6 +5570,15 @@ msgstr "dla działających"
 msgctxt "TWFXPLUGINCOPYMOVEOPERATIONOPTIONSUI.LBLFILEEXISTS.CAPTION"
 msgid "When file exists"
 msgstr "Gdy plik istnieje"
+
+#: ulng.rscfgtoolbaraddbutton
+msgid "&Add button to end"
+msgstr ""
+
+#: ulng.rscfgtoolbarinsertbutton
+msgctxt "ulng.rscfgtoolbarinsertbutton"
+msgid "&Insert new button"
+msgstr "Dodaj nowy przycisk"
 
 #: ulng.rscolattr
 msgid "Attr"
