--- a/branches/0.5/language/doublecmd.uk_UA.po
+++ b/branches/0.5/language/doublecmd.uk_UA.po
@@ -501,6 +501,7 @@ msgid "Keep scrolling"
 msgstr "Одночасна прокрутка"
 
 #: TFRMCONFIGTOOLBAR.BTNAPPENDBUTTON.CAPTION
+msgctxt "TFRMCONFIGTOOLBAR.BTNAPPENDBUTTON.CAPTION"
 msgid "&Insert new button"
 msgstr "В&ставити нову кнопку"
 
@@ -5515,6 +5516,15 @@ msgstr "для запуску"
 msgctxt "TWFXPLUGINCOPYMOVEOPERATIONOPTIONSUI.LBLFILEEXISTS.CAPTION"
 msgid "When file exists"
 msgstr "Якщо файл існує"
+
+#: ulng.rscfgtoolbaraddbutton
+msgid "&Add button to end"
+msgstr ""
+
+#: ulng.rscfgtoolbarinsertbutton
+msgctxt "ulng.rscfgtoolbarinsertbutton"
+msgid "&Insert new button"
+msgstr "В&ставити нову кнопку"
 
 #: ulng.rscolattr
 msgid "Attr"
